; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_smu.c_smu_expose_childs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/macintosh/extr_smu.c_smu_expose_childs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__*, i32 }
%struct.TYPE_3__ = type { i32 }
%struct.work_struct = type { i32 }
%struct.device_node = type { i32 }

@smu = common dso_local global %struct.TYPE_4__* null, align 8
@.str = private unnamed_addr constant [12 x i8] c"smu-sensors\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.work_struct*)* @smu_expose_childs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @smu_expose_childs(%struct.work_struct* %0) #0 {
  %2 = alloca %struct.work_struct*, align 8
  %3 = alloca %struct.device_node*, align 8
  store %struct.work_struct* %0, %struct.work_struct** %2, align 8
  store %struct.device_node* null, %struct.device_node** %3, align 8
  br label %4

4:                                                ; preds = %22, %1
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** @smu, align 8
  %6 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 8
  %8 = load %struct.device_node*, %struct.device_node** %3, align 8
  %9 = call %struct.device_node* @of_get_next_child(i32 %7, %struct.device_node* %8)
  store %struct.device_node* %9, %struct.device_node** %3, align 8
  %10 = icmp ne %struct.device_node* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %4
  %12 = load %struct.device_node*, %struct.device_node** %3, align 8
  %13 = call i64 @of_device_is_compatible(%struct.device_node* %12, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %11
  %16 = load %struct.device_node*, %struct.device_node** %3, align 8
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** @smu, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 0
  %21 = call i32 @of_platform_device_create(%struct.device_node* %16, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32* %20)
  br label %22

22:                                               ; preds = %15, %11
  br label %4

23:                                               ; preds = %4
  ret void
}

declare dso_local %struct.device_node* @of_get_next_child(i32, %struct.device_node*) #1

declare dso_local i64 @of_device_is_compatible(%struct.device_node*, i8*) #1

declare dso_local i32 @of_platform_device_create(%struct.device_node*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
